# mouse-clicker

./: Cargo.toml  README.md
.github/workflows/: build.yml
src/: app.rs  main.rs
src/config/: mod.rs  settings.rs
src/core/: clicker.rs  hotkey.rs  mod.rs  mouse.rs
src/ui/: main_window.rs  mod.rs
src/utils/: error.rs  mod.rs  theme.rs
