[package]
name = "mouse-clicker"
version = "0.1.0"
edition = "2021"
authors = ["YieldRay"]
description = "A cross-platform mouse auto-clicker written in Rust"
license = "MIT"

[dependencies]
tokio = "1.47.1"
egui = "0.27"
eframe = { version = "0.27", default-features = false, features = ["glow"] }
enigo = "0.2"
global-hotkey = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5.0"
egui-chinese-font = "0.1"
log = "0.4"
env_logger = "0.11"
git-version = "0.3"


[[bin]]
name = "mouse-clicker"
path = "src/main.rs"
