[package]
name = "mouse-clicker"
version = "0.1.0"
edition = "2021"
authors = ["YieldRay"]
description = "A cross-platform mouse auto-clicker written in Rust"
license = "MIT"

[dependencies]
tokio = "1.47.1"
egui = "0.27"
eframe = { version = "0.27", default-features = false, features = ["glow"] }
enigo = "0.5"
global-hotkey = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "6.0"
egui-chinese-font = "0.1"
log = "0.4"
env_logger = "0.11"
git-version = "0.3"
dark-light = "2.0.0"

[target.'cfg(windows)'.dependencies]
is_elevated = "0.1.2"
windows = { version = "0.61.3", features = [
    "Win32_UI_Shell",
    "Win32_Foundation",
    "Win32_System_Registry",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_Security_Authorization",
] }


[[bin]]
name = "mouse-clicker"
path = "src/main.rs"
